<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginTop="260dp"
        android:text="@string/please_select_first_band_color"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:fontFamily="@font/bevan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/calculatebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="320dp"
        android:background="@drawable/btn_rounded_silver"
        android:onClick="calculateButtonOnClick"
        android:text="@string/calculate"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buybutton"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/blackbutton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_rounded_black"
        android:onClick="blackButtonOnClick"
        android:text="@string/_0"
        app:layout_constraintEnd_toStartOf="@+id/brownbutton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/greenbutton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_rounded_green"
        android:onClick="greenButtonOnClick"
        android:text="@string/_5"
        app:layout_constraintEnd_toStartOf="@+id/bluebutton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blackbutton" />

    <Button
        android:id="@+id/bluebutton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_rounded_blue"
        android:onClick="blueButtonOnClick"
        android:text="@string/_6"
        app:layout_constraintEnd_toStartOf="@+id/purplebutton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/greenbutton"
        app:layout_constraintTop_toBottomOf="@+id/brownbutton" />

    <Button
        android:id="@+id/purplebutton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_rounded_violet"
        android:onClick="purpleButtonOnClick"
        android:text="@string/_7"
        app:layout_constraintEnd_toStartOf="@+id/graybutton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bluebutton"
        app:layout_constraintTop_toBottomOf="@+id/redbutton" />

    <Button
        android:id="@+id/graybutton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_rounded_gray"
        android:onClick="grayButtonOnClick"
        android:text="@string/_8"
        app:layout_constraintEnd_toStartOf="@+id/whitebutton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/purplebutton"
        app:layout_constraintTop_toBottomOf="@+id/orangebutton" />

    <Button
        android:id="@+id/whitebutton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_rounded_white"
        android:onClick="whiteButtonOnClick"
        android:text="@string/_9"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/graybutton"
        app:layout_constraintTop_toBottomOf="@+id/yellowbutton" />

    <Button
        android:id="@+id/goldbutton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/btn_rounded_gold"
        android:onClick="goldButtonOnClick"
        android:text="@string/gold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/silverbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bluebutton" />

    <Button
        android:id="@+id/silverbutton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/btn_rounded_silver"
        android:onClick="silverButtonOnClick"
        android:text="@string/silver"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/blankbutton"
        app:layout_constraintTop_toBottomOf="@+id/purplebutton" />

    <Button
        android:id="@+id/blankbutton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/btn_rounded_white"
        android:onClick="blankButtonOnClick"
        android:text="@string/blank"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graybutton" />

    <Button
        android:id="@+id/yellowbutton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_rounded_yellow"
        android:onClick="yellowButtonOnClick"
        android:text="@string/_4"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/orangebutton"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/orangebutton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_rounded_orange"
        android:onClick="orangeButtonOnClick"
        android:text="@string/_3"
        app:layout_constraintEnd_toStartOf="@+id/yellowbutton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/redbutton"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/redbutton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_rounded_red"
        android:onClick="redButtonOnClick"
        android:text="@string/_2"
        app:layout_constraintEnd_toStartOf="@+id/orangebutton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/brownbutton"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/brownbutton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_rounded_brown"
        android:onClick="brownButtonOnClick"
        android:text="@string/_1"
        app:layout_constraintEnd_toStartOf="@+id/redbutton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/blackbutton"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/bandonebutton"
        android:layout_width="41dp"
        android:layout_height="106dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="40dp"
        android:background="@color/notIndicated"
        android:onClick="firstBandOnClick"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/bandtwobutton" />

    <Button
        android:id="@+id/bandtwobutton"
        android:layout_width="41dp"
        android:layout_height="106dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="40dp"
        android:background="@color/notIndicated"
        android:onClick="secondBandOnClick"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline2" />

    <Button
        android:id="@+id/bandthreebutton"
        android:layout_width="41dp"
        android:layout_height="106dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="40dp"
        android:background="@color/notIndicated"
        android:onClick="thirdBandOnClick"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <Button
        android:id="@+id/bandfourbutton"
        android:layout_width="41dp"
        android:layout_height="106dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="40dp"
        android:background="@color/notIndicated"
        android:onClick="fourthBandOnClick"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toEndOf="@+id/bandthreebutton" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="207dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="388dp"
        android:layout_height="100dp"
        android:layout_marginBottom="42dp"
        android:contentDescription="@string/resistor_outline"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/resistor" />

    <Button
        android:id="@+id/buybutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:background="@drawable/btn_rounded_silver"
        android:onClick="buyButtonOnClick"
        android:text="@string/buy"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/calculatebutton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

</android.support.constraint.ConstraintLayout>